2005-12-05  Vino Fernando Crescini  <jcrescin@cit.uws.edu.au>

	* Tagged vlad-1_1_1

	* README :
	* configure :
	* configure.ac :
	* lib/config.h.in :

	  - Added an --enable-timer option to enable the timer function.

	* main/agent.y :
	* main/parser.h :
	* main/vlad.cpp :

	  - Added a -t option in the main program to measure the time it takes
	    for the compute and query operations to complete.

	* lib/polbase.cpp :
	* lib/polbase.h :

	  - compute_generate() now dumps the actual facts, and not some unique
	    id.

2005-12-04  Vino Fernando Crescini  <jcrescin@cit.uws.edu.au>

	* lib/smwrap.cpp :

	  - Disabled smodels output in debug mode.

	* lib/polbase.cpp :
	* lib/polbase.h :
	* lib/mapper.cpp :
	* lib/mapper.h :

	  - Moved all complex computation algorithims for mapping facts to
	    integers into the mapper class.

	* lib/Makefile.in :

	  - Added mapper.h as dependencies of polbase.cpp.

2005-12-02  Vino Fernando Crescini  <jcrescin@cit.uws.edu.au>

	* lib/polbase.cpp :
	* lib/polbase.h :

	  - Removed the ground_updateref() function. We should not ground the
	    update rules while adding update sequences.

	  - add_seqtab() will now call uref->verify() before adding it.

	* lib/seqtab.cpp :
	* lib/seqtab.h :

	  - Added a verify() function to check whether an update reference
	    contains a list with valid identifiers.

	* lib/expression.cpp :
	* lib/expression.h :
	* lib/fact.cpp :
	* lib/fact.h :
	* lib/polbase.cpp :

	  - Removed the redundand gndflag parameter from the verify() and
	    and vcopy() functions. Passing a NULL ptr for the vlist parameter
	    implies that we are checking a ground expression.

	* lib/Makefile.in :

	  - More dependency corrections.

	* lib/consttab.cpp :
	* lib/consttab.h :
	* lib/expression.cpp :
	* lib/expression.h :
	* lib/fact.cpp :
	* lib/fact.h :
	* lib/updatetab.cpp :
	* lib/updatetab.h :
	* lib/wrapper.cpp :
	* main/policy.y :

	  - Now uses the new varlist instead of stringlist.

	* lib/polbase.cpp :